improoving the auth api
